text change and guest list change

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
 							<p id='rsvp-mad-lib'>
 								We are so <input type='text' class='rsvp-mad-lib-input' name='madLib1' placeholder="Adjective" required/> to be invited to your wedding.  When we got the invitation we exclaimed  <input type='text' class='rsvp-mad-lib-input' name='madLib2' required/>!  We are so excited for  <input type='text' class='rsvp-mad-lib-input' name='madLib3' required/>. We hope the DJ plays  <input type='text' class='rsvp-mad-lib-input' name='madLibSong' placeholder="Song" required/> by  <input type='text' class='rsvp-mad-lib-input' name='madLibArtist' placeholder="Artist" required/>.  You two are the most  <input type='text' class='rsvp-mad-lib-input' name='madLib4' placeholder="Adjective" required/> <input type='text' class='rsvp-mad-lib-input' name='madLib5' placeholder="Noun" required/> and we wish you  <input type='text' class='rsvp-mad-lib-input' name='madLib6' required/>. 
 							</p>
-							<input id='rsvp-mad-lib-submit' type='submit'>
+							<input id='rsvp-mad-lib-submit' type='submit' value='Submit'>
 						</form>
 						<div id='rsvp-thank-you-wrapper'>
 							<p id='rsvp-thank-you'></p>
