--- a/app/index.html
+++ b/app/index.html
@@ -91,10 +91,12 @@
 						<li><a href='#story'>Our Story</a></li>
 						<li><a href='#engagement'>Engagement</a></li>
 						<li><a href='#wedding'>Wedding</a></li>
-						<li><a href='#gallery'>Gallery</a></li>
 						<!--
-						<li><a href='#directions'>Directions</a></li> -->
+						<li><a href='#accomodations'>Accomodations</a></li> -->
+						<li><a href='#other-events'>Other Events</a></li>
 						<li><a href='#rsvp'>RSVP</a></li>
+						<li><a href='#gallery'>Gallery</a></li>
+						<li><a href='#bridal-party'>Bridal Party</a></li>
 					</nav>
 					<div id='header-text'>
 						<h1 id='top-name'>Hannah&nbsp;</h1>
@@ -142,7 +144,7 @@
 							<div>
 								<h3>When</h3>
 								<h4>Sunday, September 2<span class='superscript'>nd</span>, 2018</h4>
-								<!--<h4>6:00PM EST</h4>-->
+								<h4>4:00PM EST</h4>
 							</div>
 							<div>
 								<h3>Where</h3>
@@ -153,39 +155,86 @@
 						</div>
 					</div>
 				</div>
+				<div class='section' id='other-events'>
+					<div class='section-container' id='other-events-container'>
+						<div>
+							<span class='section-title'>Other Events</span>
+							<div class='event'>
+								<h4>Mass and Marriage Blessing</h4>
+								<h5>Saturday 09.01.18 - 5:00 PM</h5>
+								<h5>
+									<a class='link' href='https://stmaryoldtown.org/' target="_">The Basilica of Saint Mary</a>
+								</h5>
+								<h5>
+									310 S Royal St, Alexandria, VA 22314
+								</h5>
+								</br>
+								<p>
+									Join us for Catholic mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church. Afterwards, we will be taking formal pictures.<br/>
+									We will then head over to Murphy's Irish Pub in Alexandria, VA.  Join us for a drink!&nbsp;&nbsp;<span class='italic'>(this is a non-hosted event)</span>
+								</p>
+							</div>
+							<div class='event'>
+								<h4>Appetizers and Games</h4>
+								<h5>Monday 09.03.18 - 2:00PM</h5>
+								<h5><a class='link' href='https://goo.gl/maps/YDyauXXv6VM2' target='_'>3000 Spout Run Parkway</a></h5>
+								<p>
+								 	If you're still in town and can't get enough of us, Hannah and Patrick will be hosting a casual gathering with light appetizers and drinks at the club room of Cardinal House Condominiums. There will be games, pool, and karaoke.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class='section' id='rsvp'>
+					<div class='section-container' id='rsvp-text-container'>
+						<div>
+							<span class='section-title'>RSVP</span>
+							<span class='link' id='rsvp-button'>Click to RSVP!</span>
+						</div>
+					</div>
+					<img class='section-image' src='./styles/images/1024/rsvp.jpg' />
+				</div>
+				<div class='section' id='gallery'>
+					<div class='section-container' id='gallery-text-container'>
+						<span class='section-title'>Gallery</span>
+						<p>View our engagement photos in Venice, Italy!</p>
+						<span class='link' id='view-gallery'>View Gallery</span>
+					</div>
+					<img class='section-image' src='./styles/images/1024/gallery.jpg' />
+				</div>
 				<div class='section' >
 					<div id='bridal-party'>
-					<div id='bridesmaids'>
-						<span class='section-title-alt'>Bridesmaids</span>
-						<div id='bridesmaids-wrapper' class='bridal-party-wrapper'>
-							<div id='bridesmaids-bio' class='bridal-bio'>
+						<div id='bridesmaids'>
+							<span class='section-title-alt'>Bridesmaids</span>
+							<div id='bridesmaids-wrapper' class='bridal-party-wrapper'>
+								<div id='bridesmaids-bio' class='bridal-bio'>
+								</div>
+								<ul id='bridesmaid-pic-list' class='bridal-party-profile-list'>
+									<li id='erin'></li>
+									<li id='linh'></li>
+									<li id='jenny'></li>
+									<li id='katie'></li>
+									<li id='olivia'></li>
+									<li id='wennie'></li>
+									<li id='nuri'></li>
+								</ul>
 							</div>
-							<ul id='bridesmaid-pic-list' class='bridal-party-profile-list'>
-								<li id='erin'></li>
-								<li id='linh'></li>
-								<li id='jenny'></li>
-								<li id='katie'></li>
-								<li id='olivia'></li>
-								<li id='wennie'></li>
-								<li id='nuri'></li>
-							</ul>
 						</div>
-					</div>
-					<div id='groomsmen-women'>
-						<span class='section-title-alt'>Groomsmen/Groomswomen</span>
-						<div  id='groomsmen-wrapper' class='bridal-party-wrapper'>
-							<div id='groomsmen-bio' class='bridal-bio'>
+						<div id='groomsmen-women'>
+							<span class='section-title-alt'>Groomsmen/Groomswomen</span>
+							<div  id='groomsmen-wrapper' class='bridal-party-wrapper'>
+								<div id='groomsmen-bio' class='bridal-bio'>
+								</div>
+								<ul id='groomsmen-pic-list' class='bridal-party-profile-list'>
+								  	<li id='winston'></li>
+									<li id='donna'></li>
+									<li id='aaron'></li>
+									<li id='brian'></li>
+									<li id='charles'></li>
+									<li id='ritchie'></li>
+								</ul>
 							</div>
-							<ul id='groomsmen-pic-list' class='bridal-party-profile-list'>
-							  	<li id='winston'></li>
-								<li id='donna'></li>
-								<li id='aaron'></li>
-								<li id='brian'></li>
-								<li id='charles'></li>
-								<li id='ritchie'></li>
-							</ul>
 						</div>
-					</div>
 					</div>
 					<div id='bridal-party-description'>
 						<div id='erin-bio'>
@@ -279,53 +328,6 @@
 						  <p>Brian is Hannah's older brother.</p>
 					    </div>
 					</div>
-				</div>
-				<div class='section' id='other-events'>
-					<div class='section-container' id='other-events-container'>
-						<div>
-							<span class='section-title'>Other Events</span>
-							<div class='event'>
-								<h4>Mass and Marriage Blessing</h4>
-								<h5>Saturday 09.01.18 - 5:00 PM</h5>
-								<h5>
-									<a class='link' href='https://stmaryoldtown.org/' target="_">The Basilica of Saint Mary</a>
-								</h5>
-								<h5>
-									310 S Royal St, Alexandria, VA 22314
-								</h5>
-								</br>
-								<p>
-									Join us for Catholic mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church. Afterwards, we will be taking formal pictures.<br/>
-									We will then head over to Murphy's Irish Pub in Alexandria, VA.  Join us for a drink!&nbsp;&nbsp;<span class='italic'>(this is a non-hosted event)</span>
-								</p>
-							</div>
-							<div class='event'>
-								<h4>Appetizers and Games</h4>
-								<h5>Monday 09.03.18</h5>
-								<h5><a class='link' href='https://goo.gl/maps/YDyauXXv6VM2' target='_'>3000 Spout Run Parkway</a></h5>
-								<p>
-								 	If you're still in town and can't get enough of us, Hannah and Patrick will be hosting a casual gathering with light appetizers and drinks at the club room of Cardinal House Condominiums. There will be games, pool, and karaoke.
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class='section' id='gallery'>
-					<div class='section-container' id='gallery-text-container'>
-						<span class='section-title'>Gallery</span>
-						<p>View our engagement photos in Venice, Italy!</p>
-						<span class='link' id='view-gallery'>View Gallery</span>
-					</div>
-					<img class='section-image' src='./styles/images/1024/gallery.jpg' />
-				</div>
-				<div class='section' id='rsvp'>
-					<div class='section-container' id='rsvp-text-container'>
-						<div>
-							<span class='section-title'>RSVP</span>
-							<span class='link' id='rsvp-button'>Click to RSVP!</span>
-						</div>
-					</div>
-					<img class='section-image' src='./styles/images/1024/rsvp.jpg' />
 				</div>
 			</div>
 		</div>
