initial accomodations section added

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+q	a<!DOCTYPE html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--build:css styles/css/wedding.min.css -->
@@ -108,8 +108,6 @@
 						<li><a href='#story'>Our Story</a></li>
 						<li><a href='#engagement'>Engagement</a></li>
 						<li><a href='#wedding'>Wedding</a></li>
-						<!--
-						<li><a href='#accomodations'>Accomodations</a></li> -->
 						<li><a href='#other-events'>Other Events</a></li>
 						<li><a href='#rsvp'>RSVP</a></li>
 						<li><a href='#gallery'>Gallery</a></li>
@@ -169,6 +167,21 @@
 								<h4>2708 Enterprise Road</h4>
 								<h4>Mitchellville, MD 20721</h4>
 							</div>
+						</div>
+					</div>
+				</div>
+				<div class='section' id='accomodations'>
+					<div class='section-container' id='accomodations-text-container'>
+						<div>
+						<span class='section-title-alt'>Accomodations</span>
+						</div>	
+						<div>
+							<h4 class='link'><a href="https://www.wyndhamhotels.com/days-inn/lanham-maryland/days-inn-lanham-washington-dc/overview" target="_">Days Inn Lanham Washington D.C</a></h4>
+							<h5>9023 Annapolis Road</br>
+								Lanham Maryland</br>
+								United States</br>
+							</h5>
+							<p>Rooms reserved under TajoZhou for Sunday, September 2<span class='superscript'>nd</span>, 2018</p>
 						</div>
 					</div>
 				</div>
