added background for accomodations

--- a/app/index.html
+++ b/app/index.html
@@ -171,9 +171,10 @@ q	a<!DOCTYPE html>
 					</div>
 				</div>
 				<div class='section' id='accomodations'>
+					<img class='section-image' src='./styles/images/1024/accomodations.png' />
 					<div class='section-container' id='accomodations-text-container'>
 						<div>
-						<span class='section-title-alt'>Accomodations</span>
+						<span class='section-title'>Accomodations</span>
 						</div>	
 						<div>
 							<h4 class='link'><a href="https://www.wyndhamhotels.com/days-inn/lanham-maryland/days-inn-lanham-washington-dc/overview" target="_">Days Inn Lanham Washington D.C</a></h4>
