--- a/app/index.html
+++ b/app/index.html
@@ -182,7 +182,7 @@ q	a<!DOCTYPE html>
 								Lanham Maryland</br>
 								United States</br>
 							</h5>
-							<p>Rooms reserved under TajoZhou for Sunday, September 2<span class='superscript'>nd</span>, 2018 for $82</p>
+							<p>Rooms reserved under TajoZhou for Sunday, September 2<span class='superscript'>nd</span>, 2018 for $82 (including tax)</p>
 						</div>
 					</div>
 				</div>
