--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-q	a<!DOCTYPE html>
+<!DOCTYPE html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--build:css styles/css/wedding.min.css -->
@@ -202,6 +202,7 @@ q	a<!DOCTYPE html>
 								</br>
 								<p>
 									Join us for Catholic mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church. Afterwards, we will be taking formal pictures.<br/>
+									Semi-formal attir </br>
 									We will then head over to Murphy's Irish Pub in Alexandria, VA.  Join us for a drink!&nbsp;&nbsp;<span class='italic'>(this is a non-hosted event)</span>
 								</p>
 							</div>
