--- a/app/index.html
+++ b/app/index.html
@@ -182,7 +182,7 @@
 								Lanham Maryland</br>
 								United States</br>
 							</h5>
-							<p>Rooms reserved under TajoZhou for Sunday, September 2<span class='superscript'>nd</span>, 2018 for $82 (including tax)</p>
+							<p>Rooms reserved under TajoZhou for Sunday, September 2<span class='superscript'>nd</span>, 2018 for $82 (tax included)</p>
 						</div>
 					</div>
 				</div>
@@ -199,10 +199,10 @@
 								<h5>
 									310 S Royal St, Alexandria, VA 22314
 								</h5>
+								<h5 class='italic'>Semi-Formal Attire</h5>
 								</br>
 								<p>
 									Join us for Catholic mass at 5 PM with a blessing from one of Hannah's oldest friends Reverend Andrew Haissig after church. Afterwards, we will be taking formal pictures.<br/>
-									Semi-formal attir </br>
 									We will then head over to Murphy's Irish Pub in Alexandria, VA.  Join us for a drink!&nbsp;&nbsp;<span class='italic'>(this is a non-hosted event)</span>
 								</p>
 							</div>
