add end time for gathering

--- a/app/index.html
+++ b/app/index.html
@@ -208,7 +208,7 @@
 							</div>
 							<div class='event'>
 								<h4>Appetizers and Games</h4>
-								<h5>Monday 09.03.18 - 2:00PM</h5>
+								<h5>Monday 09.03.18 - 2:00PM - 4:00PM</h5>
 								<h5><a class='link' href='https://goo.gl/maps/YDyauXXv6VM2' target='_'>3000 Spout Run Parkway</a></h5>
 								<p>
 								 	If you're still in town and can't get enough of us, Hannah and Patrick will be hosting a casual gathering with light appetizers and drinks at the club room of Cardinal House Condominiums. There will be games, pool, and karaoke.
