--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,7 @@
 						<li><a href='#wedding'>Wedding</a></li>
 						<li><a href='#other-events'>Other Events</a></li>
 						<li><a href='#rsvp'>RSVP</a></li>
+						<li><a href='#registry'>Registry</a></li>
 						<li><a href='#gallery'>Gallery</a></li>
 						<li><a href='#bridal-party'>Bridal Party</a></li>
 					</nav>
@@ -225,6 +226,17 @@
 						</div>
 					</div>
 					<img class='section-image' src='./styles/images/1024/rsvp.jpg' />
+				</div>
+				<div class='section' id='registry'>
+					<div class='section-container' id='registry-text-container'>
+							<span class='section-title'>Registry</span>
+							<div>
+								<p class='align-center'>Hannah and Patrick feel honored and blessed by your presence at our wedding.</p>
+								<p class='align-center'>We decided not to have a traditional wedding registry. If you would like to help us with the next chapter in our lives, monetary contributions would be greatly appreciated.
+								</p>
+							</div>
+					</div>
+					<img class='section-image' src='./styles/images/1024/registry.png' />
 				</div>
 				<div class='section' id='gallery'>
 					<div class='section-container' id='gallery-text-container'>
